adding Mimic file watcher to tfs repo

--- a/Mimic/App.config
+++ b/Mimic/App.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="watchRoot" value="./" />
-    <add key="devRoot" value="//fmg_cifs1/WebDevelopment/puglisij/webserver"></add>
-    <add key="devPaths" value="Views,"/>
-    <add key="watchPaths" value="Views,wwwroot"></add>
-  
+    <add key="watchRoot" value="./Watch" />
+    <add key="watchPaths" value=""></add>
+    <add key="devRoot" value="./Views"></add>
+    <add key="devPaths" value=""/>
+    <add key="excludedPaths" value="**/*.tmp, **/*.buzz"/>
   </appSettings>
 </configuration>
